--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Rooms#index</h1>
-<p>Find me in app/views/rooms/index.html.erb</p>
+<section class="vh-100" style="background-color: #eee;">
+  
+  <h1>Rooms#index</h1>
+  <div class="rooms"></div>
+  <p>Find me in app/views/rooms/index.html.erb</p>
+  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+  <br>
+  <%#= render "games/board" %>
+
+</section>
