--- a/app/views/rooms/top.html.erb
+++ b/app/views/rooms/top.html.erb
@@ -1,3 +1,3 @@
 <section class="vh-100 text-center" style="background-color: #eee;">
-  <%= link_to "Enter", "#" %>
+  <%= link_to "Enter", rooms_path %>
 </section>
