--- a/app/views/rooms/_nine_rooms.html.erb
+++ b/app/views/rooms/_nine_rooms.html.erb
@@ -1,5 +1,5 @@
 <% rooms.each do |room| %>
   <div>
-    <%= link_to "Room #{room.id}", "#" %>
+    <%= link_to "Room #{room.id}", room_path(room.id) %>
   </div>
 <% end %>
