相互通信の雛形

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -11,6 +11,8 @@
       <% unless @messages.nil? %>
         <%= render @messages %>
       <% end %>
+      <%= label_tag :content, 'Say something:' %>
+      <%= text_field_tag :content, nil, data: { behavior: 'room_speaker' } %>
     </div>
   </div>
   <%#= render "games/board" %>
