相互通信の雛形(2)
メッセージとユーザーが紐づいてないため
まだ保存できない

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,7 +7,7 @@
     <div class="container-fluid	board">
       <%= render partial: 'rooms/nine_rooms', locals: { rooms: @rooms } %>
     </div>
-    <div class="chat-container">
+    <div class="chat-container" id="messages">
       <% unless @messages.nil? %>
         <%= render @messages %>
       <% end %>
