相互通信の雛形(3)

--- a/app/assets/stylesheets/room.css
+++ b/app/assets/stylesheets/room.css
@@ -15,11 +15,29 @@
 
 .board, .lobby {
   height: 90%;
-  background-color:lightgoldenrodyellow
+  background-color: lightgoldenrodyellow
 }
 
 .chat-container {
-  height: 80%;
+  height: 100%;
   width: 400px;
   background-color: darksalmon;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.chat-lists {
+  height: 100%;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  background-color: lightgreen;
+  overflow-y: scroll;
+  word-break: break-all;
+}
+
+.chat-input-container {
+  height: auto;
+  margin-left: 5px;
+  background-color: royalblue;
 }
