--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,3 @@
 <div class='message'>
-  <p><%#= message.user.nickname %></p>
-  <p><%= message.content %></p>
+  <p><%= "#{message.user.nickname} : #{message.content}" %></p>
 </div>
