--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,7 +2,7 @@
   <div id="in_lobby">
     <div class="header">
       <div>
-        まだチャット機能しかないよ！
+        まだチャット機能しかないよ
       </div>
       <div class="col-md-3 text-end">
         <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-outline-danger me-2" %>
