--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,9 +1,7 @@
 <div id="in_room" data-room_id="<%= @room.id %>">
-  <div class="header">
-  <div><%= "Header is here. and here is Room #{@room.id}" %></div>
-  </div>
+  <%= render partial: 'rooms/header', locals: { room: @room } %>
   <div class="main-container">
     <div class="container-fluid	board"></div>
-    <div class="chat-container"></div>
+    <%= render partial: "rooms/chat_side_bar", locals: { messages: @messages }  %>
   </div>
 </div>
