--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -4,7 +4,7 @@
   </div>
     <div class="main-container">
       <%= render "nine_rooms" %>
-      <%= render "chat_side_bar" %>
+      <%= render "chat_bar" %>
     </div>
   </div>
 </section>
