--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,7 +3,7 @@
     <%= render "header" %>
     <div class="main-container">
       <div class="container-fluid	board"></div>
-      <%= render "chat_side_bar" %>
+      <%= render "user_chat_bar" %>
     </div>
   </div>
 </section>
