--- a/app/views/rooms/_user_chat_bar.html.erb
+++ b/app/views/rooms/_user_chat_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="chat-container">
-  <div class="user-list">
+  <div class="user-list" id="user-list">
     <% @room.users.each do |user| %>
       <%= render "user", user: user %>
     <% end %>
