--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,10 +3,11 @@
     <%= render "header" %>
     <div class="main-container">
       <div class="container-fluid	board">
-        <div class="seats" id="seat-1">対戦席 1</div>
-        <div class="seats" id="seat-2">対戦席 2</div>
-        <div class="seats" id="seat-3">対戦席 3</div>
-        <div class="seats" id="seat-4">対戦席 4</div>
+        <div class="seats" id="seat-1">対戦席1に移動</div>
+        <div class="seats" id="seat-2">対戦席2に移動</div>
+        <div class="seats" id="seat-3">対戦席3に移動</div>
+        <div class="seats" id="seat-4">対戦席4に移動</div>
+        <div class="seats" id="spectators">観戦席に移動</div>
       </div>
       <%= render "user_chat_bar" %>
     </div>
