--- a/app/assets/stylesheets/room.css
+++ b/app/assets/stylesheets/room.css
@@ -1,6 +1,5 @@
 .main-container {
   height: calc(100vh - 50px);
-  /* background-color: red; */
   display: flex;
   justify-content: space-between;
 }
@@ -103,6 +102,6 @@ p.p-game-players, p.p-audience {
   background-color: wheat;
 }
 
-#spectators {
+#spectator {
   background-color: aquamarine;
 }
