--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,6 +3,9 @@
     <%= render "header" %>
     <div class="main-container">
       <div class="container-fluid	board">
+
+        <%= render "board" %>
+        
         <div class="seat-row top-row">
           <div class="seat-container"></div>
           <div class="seat-container">
