--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,6 +5,7 @@
       <div class="container-fluid	board">
 
         <%= render "board" %>
+        <%= button_tag("パス", class: "btn btn-lg btn-pass", id: "btn-pass") %>
         
         <div class="seat-row top-row">
           <div class="seat-container"></div>
