--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -6,6 +6,7 @@
 
         <%= render "board" %>
         <%= button_tag("パス", class: "btn btn-lg btn-pass", id: "btn-pass") %>
+        <%= button_tag("リセット", class: "btn btn-lg btn-reset", id: "btn-reset") %>
         
         <div class="seat-row top-row">
           <div class="seat-container"></div>
