ボタンの表示切り替えをvisibility属性に変更

--- a/app/assets/stylesheets/room.css
+++ b/app/assets/stylesheets/room.css
@@ -170,6 +170,7 @@ p.p-game-players, p.p-audience {
   font-weight: bold;
   letter-spacing: 0.05em;
   border-radius: 0.3rem;
+  visibility: hidden;
 }
 
 .btn.btn-pass:hover,
@@ -192,6 +193,7 @@ p.p-game-players, p.p-audience {
   font-weight: bold;
   letter-spacing: 0.05em;
   border-radius: 0.3rem;
+  visibility: hidden;
 }
 
 .btn.btn-reset:hover,
