fix: How to play

--- a/app/views/rooms/_header.html.erb
+++ b/app/views/rooms/_header.html.erb
@@ -9,7 +9,7 @@
   <div class="col-md-3 text-end d-flex justify-content-end">
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-howToPlay me-4" data-bs-toggle="modal" data-bs-target="#howToPlay">
-      Launch demo modal
+      How to play
     </button>
 
     <!-- Modal -->
