--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,3 +1,6 @@
+<%= audio_tag("addRing.mp3", id:"add-ring-mp3") %>
+<%= audio_tag("yourTurn.mp3", id:"your-turn-mp3") %>
+
 <section class="vh-100" style="background-color: #eee;">
   <div id="in_room" data-room_id="<%= @room.id %>">
     <%= render "header" %>
