ユーザー詳細画面を実装

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2,7 +2,7 @@
   height: 50px;
   background-color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
 }
 
@@ -12,5 +12,5 @@
 }
 
 .error-message {
-  color: red
+  color: red;
 }
