--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
     <%= render "rooms/header" %>
 
-    <div class="user-name ps-3">
+    <div class="mypage-user-name ps-3">
       <%= @user.nickname %>
     </div>
 
