--- a/app/views/rooms/_header.html.erb
+++ b/app/views/rooms/_header.html.erb
@@ -3,7 +3,12 @@
     <%# ルーム内なら部屋番号を表示 %>
     <div class="header-title ms-3"><%= "Here is Room #{@room.id}" %></div>
   <% else %>
-    <div class="header-title ms-3"></div>
+    <%# ロビー内ならマイページへのリンク %>
+    <% if @user %>
+      <div class="header-title ms-3"></div>
+    <% else %>
+      <%= link_to 'マイページ', user_path(current_user.id), class: "btn btn-secondary ms-2 link-to-my-page" %>
+    <% end %>
   <% end %>
   <div class="text-end d-flex justify-content-end">
     <!-- Button trigger modal -->
